--- a/.cproject
+++ b/.cproject
@@ -47,6 +47,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/utils/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1814537781" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -84,6 +85,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/utils/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1780784768" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -166,6 +168,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/utils/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.669766602" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -201,6 +204,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/utils/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.984572457" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
