--- a/.cproject
+++ b/.cproject
@@ -48,6 +48,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/c_sdk/standard/mqtt/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.1814537781" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -86,6 +87,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/c_sdk/standard/mqtt/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1780784768" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -169,6 +171,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/c_sdk/standard/mqtt/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.669766602" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
 							</tool>
@@ -205,6 +208,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/crypto/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/3rdparty/mbedtls_utils}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/freertos_plus/standard/tls/include}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/WiFi_AWS_Iot/Middlewares/libraries/c_sdk/standard/mqtt/include}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.984572457" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
